# filedowntools

./: LICENSE  README.md  pyproject.toml
src/filedowntools/: __init__.py  __main__.py  download.py  errors.py  user_agents.py
src/filedowntools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: multifiles.py  multifiles_headers.py  singlefile.py  singlefile_headers.py  singlelargefile.py  singlelargefile_headers.py
